# GenAI-Science

./: .gitignore  README.md  pyproject.toml
data/: prompts.csv  prompts_735.csv  results_bloom_1b1.csv  results_claude.csv  results_example_claude.csv  results_example_gemini.csv  results_gemini.csv  results_gpt.csv  results_gpt_4omini.csv  templates.xlsx
src/: runner.py
src/create_prompts/: templates_to_prompts.py
src/run_llms/: bloom_runner.py  claude_runner.py  gemini_runner.py  gpt_runner.py  openai_runner.py  run_llm.py  runner.py
