[project]
name = "genai-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.75.0",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "huggingface-hub>=0.36.0",
    "openai>=2.15.0",
    "torch>=2.9.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.4",
]
