[project]
name = "genai-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "anthropic>=0.79.0",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.62.0",
    "ipykernel>=7.2.0",
    "openai>=2.17.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
